# optimize-cuda-memory-usage-v1

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
data/bandwidthTest/: data-nvlink.csv  data.csv  run-nvlink.sh  run.sh
data/repeat/: memopt-config.json  repeat.sh
data/splitDataMovement/: data-nvlink.csv  data.csv  run-nvlink.sh  run.sh
data/varyingTimeOverhead/: memopt-config.json  varyingTimeOverhead.sh
experiments/: CMakeLists.txt  bandwidthTest.cu  optimizedStream.cu  splitDataMovement.cu
include/: argh.h  bipartiteGraphMaximumMatching.hpp  json.hpp
optimization/: CMakeLists.txt  customGraph.hpp  executor.cu  executor.hpp  optimization.cu  optimization.hpp  optimizationInput.hpp  optimizationOutput.hpp  optimizer.cu  optimizer.hpp  taskManager.cu  taskManager.hpp
optimization/strategies/: CMakeLists.txt  firstStepSolver.cpp  firstStepSolver.hpp  integerProgrammingSolver.cpp  integerProgrammingSolver.cu  integerProgrammingSolver.hpp  noOptimizationStrategy.cu  prefetchOnlyStrategy.cu  prefetchOnlyStrategy.hpp  secondStepSolver.cpp  secondStepSolver.hpp  strategies.hpp  strategyUtilities.cu  strategyUtilities.hpp  twoStepOptimizationStrategy.cu
playground/: CMakeLists.txt  assertion.cu  captureGraph.cu  helloWorld.cu  modifyKernelNodeParams.cu  monitorMemoryUsage.cu  orToolsPlayground.cpp  orToolsRoutingPlayground.cpp  tiledCholesky.cu  tiledCholeskyPlayground.cu  z3Playground.cpp
profiling/: CMakeLists.txt  annotation.cu  annotation.hpp  cudaGraphExecutionTimelineProfiler.cu  cudaGraphExecutionTimelineProfiler.hpp  memoryManager.cpp  memoryManager.cu  memoryManager.hpp  memred.cu  memred.hpp  peakMemoryProfiler.cu  peakMemoryProfiler.hpp  peakMemoryUsageProfiler.cu  peakMemoryUsageProfiler.hpp
public/: CMakeLists.txt  memopt.cu  memopt.hpp
userApplications/: CMakeLists.txt  artificialApplication.cu  tiledCholesky.cu
userApplications/lulesh/: CMakeLists.txt  Makefile  lulesh.cu  lulesh.h  sm_utils.inl  util.h  vector.h
utilities/: CMakeLists.txt  alternativeCudaGemm.cu  alternativeCudaGemm.hpp  configurationManager.hpp  constants.hpp  cudaGraphExecutionTimelineProfiler.cu  cudaGraphExecutionTimelineProfiler.hpp  cudaGraphUtilities.cu  cudaGraphUtilities.hpp  cudaUtilities.cu  cudaUtilities.hpp  cuptiUtilities.hpp  disjointSet.hpp  injectedPeakMemoryProfiler.cu  logger.cpp  logger.hpp  peakMemoryProfiler.cu  types.hpp  utilities.cpp  utilities.hpp
