add_library(
  optimization
  SHARED
  optimization.cu
  optimizer.cu
  executor.cu
)
target_link_libraries(
  optimization
  strategies
  annotation
  cudaUtilities
  cudaGraphUtilities
  cudaGraphExecutionTimelineProfiler
  peakMemoryUsageProfiler
  utilities
  -lcuda
)

add_subdirectory(strategies)
