add_library(
  optimization
  STATIC
  optimization.cu
  optimizer.cu
  executor.cu
)
target_link_libraries(
  optimization
  PRIVATE
  strategies
  annotation
  cudaUtilities
  cudaGraphUtilities
  cudaGraphExecutionTimelineProfiler
  peakMemoryUsageProfiler
  utilities
  -lcuda
)

add_subdirectory(strategies)
