add_library(annotation SHARED annotation.cu)

add_library(cudaGraphExecutionTimelineProfiler SHARED cudaGraphExecutionTimelineProfiler.cu)
target_link_libraries(cudaGraphExecutionTimelineProfiler cudaUtilities -lcupti)

add_library(peakMemoryUsageProfiler SHARED peakMemoryUsageProfiler.cu)
target_link_libraries(peakMemoryUsageProfiler cudaUtilities)

add_library(memoryManager SHARED memoryManager.cpp)
